--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Seattle Tourism Project</title>
   </head>
   <body>
+    <div class='page'>
+    <header>
     <h1>Explore Seattle like a local</h1>
+    </header>
+    <figure>
+      <img src='' alt='A picture of the Seattle skyline'/>
+      <figcaption>A picture of the Seattle skyline</figcaption>
+    </figure>
+    </div>
   </body>
 </html>
