--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Explore Seattle like a local</h1>
     </header>
     <figure>
-      <img src='images/home-seattle-skyline-2.jpg' alt='A picture of the Seattle skyline'/>
+      <img src='home.jpg' alt='A picture of the Seattle skyline'/>
       <figcaption>A picture of the Seattle skyline</figcaption>
     </figure>
     </div>
