--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Explore Seattle like a local</h1>
     </header>
     <figure>
-      <img src='/home.jpg' alt='A picture of the Seattle skyline'/>
+      <img src='/home.jpg' alt='A picture of Seattle'/>
+      <figcaption>A picture of Seattle</figcaption>
     </figure>
     </div>
   </body>
