--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <h1>Explore Seattle like a local</h1>
     </header>
     <figure>
-      <img src='/home.jpg' alt='A picture of Seattle'/>
-      <figcaption>A picture of Seattle</figcaption>
+      <img src='./home.jpg' alt='A picture of Seattle'/>
     </figure>
     </div>
   </body>
