--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <div class='page'>
-    <header>
-    <h1>Explore Seattle like a local</h1>
-    </header>
-    <figure>
-      <img src='./home.jpg' alt='A picture of Seattle'/>
-    </figure>
+      <header>
+        <h1>Explore Seattle like a local</h1>
+      </header>
+      <figure>
+        <img src='/home.jpg' alt='A picture of Seattle'/>
+      </figure>
     </div>
   </body>
 </html>
