added non functioning buttons
need to style those buttons...

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
         <h1>Explore Seattle like a local</h1>
       </header>
       <figure>
-        <img src='/home.jpg' alt='A picture of Seattle'/>
+        <img src='/home.jpg' alt='A picture of Seattle'/> <
       </figure>
+      <!-- Buttons -->
+      <a href='nowhere.html' class='button'>Community</a>
+      <a href='nowhere.html' class='button'>Transportation</a>
+      <a href='nowhere.html' class='button'>Landmarks</a>
+      <a href='nowhere.html' class='button'>Cafes</a>
     </div>
   </body>
 </html>
