--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Explore Seattle like a local</h1>
       </header>
       <figure>
-        <img src='/home.jpg' alt='A picture of Seattle'/> <
+        <img src='/home.jpg' alt='A picture of Seattle'/>
       </figure>
       <!-- Buttons -->
       <a href='nowhere.html' class='button'>Community</a>
