--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="/home.jpg" alt="A picture of Seattle.">
       </figure>
       <!-- Buttons -->
-      <a href='nowhere.html' class='button'>Community</a>
+      <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='button'>Community</a>
       <a href='nowhere.html' class='button'>Transportation</a>
       <a href='nowhere.html' class='button'>Landmarks</a>
       <a href='nowhere.html' class='button'>Cafes</a>
