--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Explore Seattle like a local</h1>
       </header>
       <figure>
-        <img src="/home.jpg" alt="A picture of Seattle.">
+        <img src="/home.jpg" alt="A picture of Seattle."> <!-- Why is the image not displaying!!! -->
       </figure>
       <!-- Buttons -->
       <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='button'>Community</a>
